--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -26,8 +26,8 @@
                         <tr>
                           <th scope="col">Nom</th>
                           <th scope="col">Email</th>
-                          <th scope="col">NumTEl</th>
-                          <th scope="col">Addresse</th>
+                          <th scope="col">Num Tel</th>
+                          <th scope="col">Adresse</th>
                           <th scope="col"></th>
                         </tr>
                       </thead>
@@ -50,7 +50,7 @@
                             <a class="btn btn-danger btn-sm" (click)="supprimerClient(item.id)"><i class="fas fa-trash-alt" ></i></a>
                           </td>
                         </tr>
-                     
+
                       </tbody>
                     </table>
                   </div>
@@ -62,4 +62,4 @@
       </div>
     </div>
   </div>
-  
+
