--- a/src/app/pages/client/edit-dialog-client.html
+++ b/src/app/pages/client/edit-dialog-client.html
@@ -3,23 +3,23 @@
 <mat-dialog-content class="mat-typography">
 <form >
       <div class="form-group">
-        <label for="immatriculation">Nom</label>
+        <label for="nom">Nom</label>
         <input  class="form-control" [(ngModel)]="data.nom" name="nom" id="nom">
       </div>
       <div class="form-group">
-        <label for="numCarteGrise">Email</label>
+        <label for="email">Email</label>
         <input  class="form-control" [(ngModel)]="data.email" name="email" id="email">
       </div>
       <div class="form-group">
-        <label for="numCarteGrise">NumTEl</label>
+        <label for="numTel">Num Tel</label>
         <input  class="form-control" [(ngModel)]="data.numTel" name="numTel" id="numTel">
       </div>
       <div class="form-group">
-        <label for="kilometrage">Addresse</label>
+        <label for="address">Adresse</label>
         <input  class="form-control" [(ngModel)]="data.address" name="address" id="address">
       </div>
 
-      
+
 </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
