--- a/src/app/pages/InterventionPreventif/edit-dialog-interventionPreventif.html
+++ b/src/app/pages/InterventionPreventif/edit-dialog-interventionPreventif.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Modifier la mission</h2>
+<h2 mat-dialog-title>Modifier l´intervention</h2>
 
 <mat-dialog-content class="mat-typography">
 <form >
@@ -8,22 +8,22 @@
   <input  type="date" class="form-control" [(ngModel)]="data.dateInt " name="dateInt " id="dateInt ">
 </div>
 <div class="form-group">
-  <label for="destination ">Kilometrage </label>
-  <input  class="form-control" [(ngModel)]="data.kilometrage " name="kilometrage " id="kilometrage ">
+  <label for="kilometrage ">Kilometrage </label>
+  <input  class="form-control" [(ngModel)]="data.kilometrage " name="kilometrage " id="kilometrage">
 </div>
 <div class="form-group">
-  <label for="description ">ProchaineKm </label>
+  <label for="prochaineKm ">Prochaine Km </label>
   <input  class="form-control" [(ngModel)]="data.prochaineKm " name="prochaineKm " id="prochaineKm ">
 </div>
 <div class="form-group">
-  <label for="qte ">Description </label>
+  <label for="description ">Description </label>
   <input  class="form-control" [(ngModel)]="data.description " name="description " id="description ">
 </div>
- 
- 
- 
 
-      
+
+
+
+
 </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
