--- a/src/app/pages/client/dialog-client.html
+++ b/src/app/pages/client/dialog-client.html
@@ -11,15 +11,15 @@
         <input  class="form-control" [(ngModel)]="data.email" name="email" id="email">
       </div>
       <div class="form-group">
-        <label for="email">NumTel</label>
+        <label for="numTel">Num Tel</label>
         <input  class="form-control" [(ngModel)]="data.numTel" name="numTel" id="numTel">
       </div>
       <div class="form-group">
-        <label for="address">Addresse</label>
+        <label for="address">Adresse</label>
         <input  class="form-control" [(ngModel)]="data.address" name="address" id="address">
       </div>
 
-      
+
 </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
