--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,20 +1,22 @@
 <div class="main-content">
-  <nav class="navbar navbar-top navbar-horizontal navbar-expand-md navbar-dark">
+  <!-- <nav class="navbar navbar-top navbar-horizontal navbar-expand-md navbar-dark">
     <div class="container px-4">
-      <a class="navbar-brand" routerLinkActive="active" [routerLink]="['/dashboard']">
-        <img src="assets/img/brand/argon-white.png" />
+      <a class="navbar-brand" routerLinkActive="active" [routerLink]="['/dashboard']"> -->
+        <!-- <img src="assets/img/brand/argon-white.png" /> -->
+        <!-- ArZo GED
       </a>
       <button class="navbar-toggler" type="button" (click)="isCollapsed=!isCollapsed"
          aria-controls="sidenav-collapse-main">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse"  [ngbCollapse]="isCollapsed" id="sidenav-collapse-main">
+      <div class="collapse navbar-collapse"  [ngbCollapse]="isCollapsed" id="sidenav-collapse-main"> -->
         <!-- Collapse header -->
-        <div class="navbar-collapse-header d-md-none">
+        <!-- <div class="navbar-collapse-header d-md-none">
           <div class="row">
             <div class="col-6 collapse-brand">
               <a routerLinkActive="active" [routerLink]="['/dashboard']">
-                <img src="assets/img/brand/blue.png">
+                
+                ArZo GED
               </a>
             </div>
             <div class="col-6 collapse-close">
@@ -24,9 +26,9 @@
               </button>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- Navbar items -->
-        <ul class="navbar-nav ml-auto">
+        <!-- <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/dashboard']">
               <i class="ni ni-planet"></i>
@@ -51,10 +53,10 @@
               <span class="nav-link-inner--text">Profile</span>
             </a>
           </li>
-        </ul>
+        </ul> 
       </div>
     </div>
-  </nav>
+  </nav>-->
   <router-outlet></router-outlet>
 </div>
 <footer class="py-5">
