--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -19,51 +19,22 @@
   </div>
 </div>
 
-<!-- <div class="contrats row mt-3">
-    routerLinkActive="active"
-    [routerLink]="['#user-profile']"
-    
-    <div class="col-12 col-lg-4">
-        <small class="display-4">Contrats</small>
-        <div class="card shadow-none border radius-15">
-            <div class="card-body">
-                <div class="d-flex align-items-center">
-                    <div class="font-30 text-primary"><i class="bx bxs-folder"></i>
-                    </div>
-                    <div class="user-groups ms-auto">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar1.png" width="35" height="35" class="rounded-circle" alt="">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar2.png" width="35" height="35" class="rounded-circle" alt="">
-                    </div>
-                    <div class="user-plus">+</div>
-                </div>
-                <h6 class="mb-0 text-primary">Analytics</h6>
-                <small>15 files</small>
-            </div>
-        </div>
-    </div>
+<div class="d-flex wrap" *ngIf="displayInnerFolder == true">
+  <div class="file w-25" *ngFor="let contrat of contratArray">
+    <img
+      width="96"
+      height="96"
+      src="https://img.icons8.com/color/96/pdf-2--v1.png"
+      alt="pdf-2--v1"
+    />
+    <span> {{ contrat.name }} </span>
+    <span> {{ contrat.size }} </span>
+  </div>
 
-    
-    <div class="col-12 col-lg-4">
-        <small class="display-4">Factures</small>
-        <div class="card shadow-none border radius-15">
-            <div class="card-body">
-                <div class="d-flex align-items-center">
-                    <div class="font-30 text-primary"><i class="bx bxs-folder"></i>
-                    </div>
-                    <div class="user-groups ms-auto">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar1.png" width="35" height="35" class="rounded-circle" alt="">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar2.png" width="35" height="35" class="rounded-circle" alt="">
-                    </div>
-                    <div class="user-plus">+</div>
-                </div>
-                <h6 class="mb-0 text-primary">Analytics</h6>
-                <small>15 files</small>
-            </div>
-        </div>
-    </div>
-</div> -->
+  <div class="visionneuse w-75"></div>
+</div>
 
-<form *ngIf="display == true" (submit)="onSubmit()" class="sign-form col">
+<form *ngIf="display == true && displayInnerFolder == false"(submit)="onSubmit()" class="sign-form col">
   <label class="form-label col">
     Nom :
 
@@ -78,7 +49,12 @@
   <label class="form-label col">
     Type de document :
 
-    <select class="form-select" name="typeDoc" id="typeDoc" [(ngModel)]="typeDoc">
+    <select
+      class="form-select"
+      name="typeDoc"
+      id="typeDoc"
+      [(ngModel)]="typeDoc"
+    >
       <option value="contrat">Contrat</option>
       <option value="facture">Facture</option>
       <option value="recrutement">Recrutement</option>
@@ -98,17 +74,14 @@
     />
   </label>
 
-  <label class="form-label col">
-    Statut :
-
-    <select class="form-select" name="statut" id="statut" [(ngModel)]="statut">
-      <option value="nouveau">Nouveau</option>
-      <option value="approuve">Approuvé</option>
-      <option value="archive">Archivé</option>
-      <option value="signe">Signé</option>
-      <option value="finalise">Finalisé</option>
-    </select>
-  </label>
+  <label class="form-label col" for="statut"> Statut : </label>
+  <select class="form-select" name="statut" id="statut" [(ngModel)]="statut">
+    <option value="nouveau">Nouveau</option>
+    <option value="approuve">Approuvé</option>
+    <option value="archive">Archivé</option>
+    <option value="signe">Signé</option>
+    <option value="finalise">Finalisé</option>
+  </select>
 
   <button class="btn btn-primary col" type="submit">enregistrer</button>
 </form>
@@ -129,42 +102,146 @@
     </div>
   </div>
 
-  <table
-    class="table"
-    style="border-radius: 7px; box-shadow: 0px 1px 5px rgb(177, 177, 177)"
-  >
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Nom</th>
-        <th scope="col">Type doc</th>
-        <th scope="col">Statut</th>
-        <th scope="col">Mots clés</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>Mark</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>Mark</td>
-        <td>@mdo</td>
-      </tr>
-      <tr ngFor="let document of documents">
-        <th scope="row">3</th>
-        <td>{{document.size}}</td>
-        <td> {{document.type}} </td>
-        <td>{{document.statut}}</td>
-        <td>{{document.mot_cles[0]}}</td>
-      </tr>
+  <div class="contrats row mt-3">
+    <div class="col-12 col-lg-4">
       
-    </tbody>
-  </table>
+      <div class="card shadow-none border radius-15">
+        <div class="card-body">
+          <small class="display-4">Contrats*</small>
+          <div class="d-flex flex-row align-items-center justify-content-end">
+            <div class="font-60 text-primary">
+              <img
+                (click)="clikedFolder()"
+                width="96"
+                height="96"
+                src="https://img.icons8.com/color/96/folder-invoices--v1.png"
+                alt="folder-invoices--v1"
+              />
+              <small>{{countContrat()}} files*</small>
+            </div>
+            <!-- <div class="user-groups ms-auto">
+              <img
+                src="https://bootdey.com/img/Content/avatar/avatar1.png"
+                width="35"
+                height="35"
+                class="rounded-circle"
+                alt=""
+              />
+              <img
+                src="https://bootdey.com/img/Content/avatar/avatar2.png"
+                width="35"
+                height="35"
+                class="rounded-circle"
+                alt=""
+              />
+            </div> -->
+            <!-- <div class="user-plus">+</div> -->
+            <div class="ms-auto">
+              <p>ici vous avez tous les documents dee type contrat*</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-lg-4">
+      
+      <div class="card shadow-none border radius-15">
+        <div class="card-body">
+          <small class="display-4">Factures*</small>
+          <div class="d-flex align-items-center">
+            <div class="font-60 text-primary">
+              <img
+                (click)="clikedFolder()"
+                width="96"
+                height="96"
+                src="https://img.icons8.com/color/96/folder-invoices--v1.png"
+                alt="folder-invoices--v1"
+              />
+              <small>15 files*</small>
+            </div>
+            <div class="ms-auto">
+              <p>ici vous avez tous les documents dee type facture*</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col">
+      <div class="card shadow">
+        <div class="card-header border-0">
+          <h3 class="mb-0">Documents récemment enregistrés</h3>
+        </div>
+        <div class="table-responsive">
+          <table class="table">
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Type doc</th>
+                <th scope="col">Statut</th>
+                <th scope="col">Mots clés</th>
+                <th scope="col">Taille</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr
+                *ngFor="
+                  let document of documents;
+                  let i = index;
+                  paginate: {
+                    itemsPerPage: 5,
+                    currentPage: page,
+                    totalItems: total
+                  }
+                "
+              >
+                <th scope="row">{{ i + 1 }}</th>
+                <td>{{ document.name }}</td>
+                <td>{{ document.type }}</td>
+                <td>{{ document.statut }}</td>
+                <td>{{ document.mot_cles }}</td>
+                <td>{{ document.size }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="card-footer py-2">
+          <!-- <nav aria-label="...">
+            <ul class="pagination justify-content-end mb-0">
+              <li class="page-item disabled">
+                <a class="page-link" href="javascript:void(0)" tabindex="-1">
+                  <i class="fas fa-angle-left"></i>
+                  <span class="sr-only">Previous</span>
+                </a>
+              </li>
+              <li class="page-item active">
+                <a class="page-link" href="javascript:void(0)">1</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="javascript:void(0)"
+                  >2 <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="javascript:void(0)">3</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="javascript:void(0)">
+                  <i class="fas fa-angle-right"></i>
+                  <span class="sr-only">Next</span>
+                </a>
+              </li>
+            </ul>
+          </nav> -->
+          <pagination-controls
+            (pageChange)="page = $event"
+          ></pagination-controls>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
